# reaper

./: .gitignore  CHANGELOG.md  CLAUDE.MD  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.agent  Dockerfile.controller  Dockerfile.node  Makefile  README.md  TESTING.md  build.rs  cliff.toml  cobertura.xml  kind-config.yaml  tarpaulin.toml
.githooks/: pre-commit  pre-push
.github/: claude-instructions.md  copilot-instructions.md
.github/workflows/: auto-release.yml  build.yml  ci.yml  coverage.yml  docs.yml  integration.yml  manual-release.yml  release.yml  test.yml
.ignore/: bad_containerd_config.toml
ansible/: README.md  install-reaper.yml  rollback-reaper.yml
deploy/ansible/: README.md  ansible.cfg  install-reaper.yml  inventory-kind.ini.example  inventory.ini.example  rollback-reaper.yml
deploy/kubernetes/: README.md  reaper-agent.yaml  reaper-controller.yaml
docs/: BUGS.md  COMPATIBILITY.md  CONFIGURATION.md  CRD_PLAN.md  CURRENT_STATE.md  DEVELOPMENT.md  EXEC_IMPLEMENTATION_PLAN.md  INTEGRATION_TEST_PLAN.md  NOTES_FUTURE.md  OVERLAY_DESIGN.md  PLAN-config-file.md  PLAN-quickstart-playground.md  REAPER_OVERLAY_PLAN.md  RELEASING.md  SHIMV2_DESIGN.md  SHIM_ARCHITECTURE.md  TESTING.md  TODO.md  VERSIONING_PLAN.md  plan-crd.md  plan-install-script.md
docs/book/: book.toml
docs/plans/: UID_GID_IMPLEMENTATION_PLAN.md
examples/: README.md
examples/01-scheduling/: README.md  all-nodes-daemonset.yaml  setup.sh  subset-nodes-daemonset.yaml
examples/02-client-server/: README.md  server-daemonset.yaml  setup.sh
examples/03-client-server-runas/: README.md  client-daemonset.yaml  server-daemonset.yaml  setup.sh
examples/04-volumes/: README.md  configmap-nginx.yaml  emptydir-workspace.yaml  hostpath-logs.yaml  secret-env.yaml  setup.sh
examples/05-kubemix/: README.md  batch-report-job.yaml  node-health-daemonset.yaml  setup.sh  web-greeter-deployment.yaml
examples/06-ansible-jobs/: README.md  install-ansible-job.yaml  nginx-playbook-job.yaml  nginx-playbook.ansible  setup.sh
examples/07-ansible-complex/: README.md  ansible-bootstrap-daemonset.yaml  htop-compute-daemonset.yaml  htop-compute-job.yaml  setup.sh  (+4 more)
k8s/: pod-reaper.yaml  runtimeclass.yaml
kubernetes/: README.md  README_NEW.md  containerd-config.toml  runtimeclass.yaml
scripts/: README.md  build-agent-image.sh  build-controller-image.sh  build-node-image.sh  configure-containerd.sh  debug-kind-issue.sh  docker-coverage.sh  docker-test.sh  generate-crds.sh  generate-kind-inventory.sh  install-hooks.sh  install-node.sh  install-reaper.sh  kind-config.yaml  kind-integration.sh  minikube-setup-runtime.sh  minikube-test.sh  minimal-containerd-config-base.toml  minimal-containerd-config.toml  run-integration-tests.sh  setup-playground.sh  test-examples.sh  test-k8s-integration.sh  test-playground-release.sh
src/: annotations.rs  config.rs  lib.rs  main.rs
target-linux/: .rustc_info.json
tests/: integration_annotations.rs  integration_basic_binary.rs  integration_config.rs  integration_exec.rs  integration_io.rs  integration_overlay.rs  integration_overlay_isolation.rs  integration_shim.rs  integration_user_management.rs  integration_version.rs
(+218 files in other folders)
