[package]
name = "reaper"
version = "0.1.0"
edition = "2021"
authors = ["Miguel Gila <miguelgila@gmail.com>"]
description = "A Rust project"
repository = "https://github.com/miguelgi/reaper"
license = "MIT"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.28", features = ["signal", "process", "user"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
ttrpc = "0.8"
protobuf = "3.3"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[[bin]]
name = "reaper"
path = "src/main.rs"

[[bin]]
name = "reaper-runtime"
path = "src/bin/reaper-runtime/main.rs"

[[bin]]
name = "containerd-shim-reaper-v2"
path = "src/bin/containerd-shim-reaper-v2/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
opt-level = 2
