[package]
name = "reaper"
version = "0.2.1"
edition = "2021"
authors = ["Miguel Gila <miguelgila@gmail.com>"]
description = "A lightweight Kubernetes container-less runtime that executes commands directly on cluster nodes"
repository = "https://github.com/miguelgila/reaper"
license = "MIT"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.28", features = ["signal", "process", "user", "sched", "mount", "fs", "term"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
ttrpc = "0.8"
protobuf = "3.3"
containerd-shim = { version = "0.10", features = ["async", "tracing"] }
containerd-shim-protos = { version = "0.10", features = ["async"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[[bin]]
name = "reaper-runtime"
path = "src/bin/reaper-runtime/main.rs"

[[bin]]
name = "containerd-shim-reaper-v2"
path = "src/bin/containerd-shim-reaper-v2/main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
opt-level = 2
